--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "angular2-quickstart",
 	"version": "1.0.0",
 	"scripts": {
-		"start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
+		"start": "webpack-dev-server",
 		"tsc": "tsc",
 		"tsc:w": "tsc -w",
 		"lite": "lite-server",
@@ -12,17 +12,23 @@
 	"license": "ISC",
 	"dependencies": {
 		"angular2": "2.0.0-beta.11",
-		"systemjs": "0.19.24",
 		"es6-promise": "^3.0.2",
 		"es6-shim": "^0.35.0",
 		"reflect-metadata": "0.1.2",
 		"rxjs": "5.0.0-beta.2",
-		"zone.js": "0.6.4"
+		"zone.js": "^0.6.5"
 	},
 	"devDependencies": {
-		"concurrently": "^2.0.0",
+		"cross-env": "^1.0.7",
+		"html-webpack-plugin": "^2.12.0",
 		"lite-server": "^2.1.0",
+		"path": "0.12.7",
+		"ts-loader": "^0.8.1",
+		"tslint": "3.6.0",
+		"tslint-loader": "^2.1.3",
 		"typescript": "^1.8.9",
-		"typings":"^0.7.9"
+		"typings":"^0.7.9",
+		"webpack": "^1.12.14",
+		"webpack-dev-server": "^1.14.1"
 	}
 }
